--- a/Musik.html
+++ b/Musik.html
@@ -23,7 +23,7 @@
 
     <header class="mainmenu">
         <ul>
-          <li><a href="Home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Spel.html">Spel</a></li>
           <li><a href="Serier.html">Serier</a></li>
           <li><a href="Musik.html">Musik</a></li>
